@@ -2,89 +2,63 @@ package com.cocin.waifuwar.service;
 
 import com.cocin.waifuwar.dto.CardDTO;
 import com.cocin.waifuwar.dto.GachaResultDTO;
+import com.cocin.waifuwar.exception.BadRequestException;
+import com.cocin.waifuwar.exception.ResourceNotFoundException;
+import com.cocin.waifuwar.mapper.CardMapper;
 import com.cocin.waifuwar.model.Card;
 import com.cocin.waifuwar.model.User;
 import com.cocin.waifuwar.model.UserCard;
 import com.cocin.waifuwar.repository.CardRepository;
-import com.cocin.waifuwar.repository.UserRepository;
 import com.cocin.waifuwar.repository.UserCardRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.cocin.waifuwar.repository.UserRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 public class GachaService {
 
-    @Autowired
-    private CardRepository cardRepository;
+    private final CardRepository cardRepository;
+    private final UserRepository userRepository;
+    private final UserCardRepository userCardRepository;
+    private final Random random = new SecureRandom();
 
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private UserCardRepository userCardRepository;
-
-    private final Random random = new Random();
-
-    // Gacha rates (percentages)
     private static final int COMMON_RATE = 70;
     private static final int RARE_RATE = 25;
     private static final int EPIC_RATE = 4;
     private static final int LEGENDARY_RATE = 1;
 
-    // Gacha costs
     private static final int SINGLE_PULL_COST_COINS = 100;
     private static final int SINGLE_PULL_COST_GEMS = 1;
-    private static final int TEN_PULL_COST_COINS = 900; // 10% discount
-    private static final int TEN_PULL_COST_GEMS = 9;   // 10% discount
+    private static final int TEN_PULL_COST_COINS = 900;
+    private static final int TEN_PULL_COST_GEMS = 9;
+
+    public GachaService(CardRepository cardRepository,
+                        UserRepository userRepository,
+                        UserCardRepository userCardRepository) {
+        this.cardRepository = cardRepository;
+        this.userRepository = userRepository;
+        this.userCardRepository = userCardRepository;
+    }
 
     @Transactional
     public GachaResultDTO performSinglePull(Long userId, boolean useGems) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User", userId));
 
         int cost = useGems ? SINGLE_PULL_COST_GEMS : SINGLE_PULL_COST_COINS;
+        validateCurrency(user, cost, useGems);
+        deductCurrency(user, cost, useGems);
 
-        // Check if user has enough currency
-        if (useGems && user.getGems() < cost) {
-            throw new RuntimeException("Not enough gems");
-        }
-        if (!useGems && user.getCoins() < cost) {
-            throw new RuntimeException("Not enough coins");
-        }
-
-        // Deduct currency
-        if (useGems) {
-            user.setGems(user.getGems() - cost);
-        } else {
-            user.setCoins(user.getCoins() - cost);
-        }
-
-        // Perform gacha pull
         Card drawnCard = drawRandomCard();
-
-        // Add card to user's collection
-        UserCard userCard = userCardRepository.findByUserAndCard(user, drawnCard)
-                .orElse(new UserCard(user, drawnCard));
-
-        if (userCard.getId() == null) {
-            // New card
-            userCardRepository.save(userCard);
-        } else {
-            // Duplicate card - add experience
-            userCard.setExperience(userCard.getExperience() + 10);
-            userCardRepository.save(userCard);
-        }
-
+        upsertUserCard(user, drawnCard);
         userRepository.save(user);
 
-        List<CardDTO> cards = List.of(new CardDTO(drawnCard));
-
+        List<CardDTO> cards = List.of(CardMapper.toDto(drawnCard));
         return new GachaResultDTO(
                 cards,
                 cost,
@@ -97,58 +71,34 @@ public class GachaService {
     @Transactional
     public GachaResultDTO performTenPull(Long userId, boolean useGems) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User", userId));
 
         int cost = useGems ? TEN_PULL_COST_GEMS : TEN_PULL_COST_COINS;
-
-        // Check if user has enough currency
-        if (useGems && user.getGems() < cost) {
-            throw new RuntimeException("Not enough gems");
-        }
-        if (!useGems && user.getCoins() < cost) {
-            throw new RuntimeException("Not enough coins");
-        }
-
-        // Deduct currency
-        if (useGems) {
-            user.setGems(user.getGems() - cost);
-        } else {
-            user.setCoins(user.getCoins() - cost);
-        }
+        validateCurrency(user, cost, useGems);
+        deductCurrency(user, cost, useGems);
 
         List<Card> drawnCards = new ArrayList<>();
-        boolean guaranteedRare = true; // Guarantee at least one rare or higher
+        boolean needsGuaranteedRare = true;
 
         for (int i = 0; i < 10; i++) {
             Card drawnCard;
-            if (i == 9 && guaranteedRare) {
-                // Last pull and no rare+ card yet, force rare+
+            if (i == 9 && needsGuaranteedRare) {
                 drawnCard = drawGuaranteedRareCard();
             } else {
                 drawnCard = drawRandomCard();
                 if (drawnCard.getRarity() != Card.Rarity.COMMON) {
-                    guaranteedRare = false;
+                    needsGuaranteedRare = false;
                 }
             }
             drawnCards.add(drawnCard);
-
-            // Add to user's collection
-            UserCard userCard = userCardRepository.findByUserAndCard(user, drawnCard)
-                    .orElse(new UserCard(user, drawnCard));
-
-            if (userCard.getId() == null) {
-                userCardRepository.save(userCard);
-            } else {
-                userCard.setExperience(userCard.getExperience() + 10);
-                userCardRepository.save(userCard);
-            }
+            upsertUserCard(user, drawnCard);
         }
 
         userRepository.save(user);
 
         List<CardDTO> cardDTOs = drawnCards.stream()
-                .map(CardDTO::new)
-                .collect(Collectors.toList());
+                .map(CardMapper::toDto)
+                .toList();
 
         return new GachaResultDTO(
                 cardDTOs,
@@ -157,6 +107,35 @@ public class GachaService {
                 user.getCoins(),
                 user.getGems()
         );
+    }
+
+    private void validateCurrency(User user, int cost, boolean useGems) {
+        if (useGems && user.getGems() < cost) {
+            throw new BadRequestException("Not enough gems");
+        }
+        if (!useGems && user.getCoins() < cost) {
+            throw new BadRequestException("Not enough coins");
+        }
+    }
+
+    private void deductCurrency(User user, int cost, boolean useGems) {
+        if (useGems) {
+            user.setGems(user.getGems() - cost);
+        } else {
+            user.setCoins(user.getCoins() - cost);
+        }
+    }
+
+    private void upsertUserCard(User user, Card card) {
+        UserCard userCard = userCardRepository.findByUserAndCard(user, card)
+                .orElse(new UserCard(user, card));
+
+        if (userCard.getId() == null) {
+            userCardRepository.save(userCard);
+        } else {
+            userCard.setExperience(userCard.getExperience() + 10);
+            userCardRepository.save(userCard);
+        }
     }
 
     private Card drawRandomCard() {
@@ -173,17 +152,15 @@ public class GachaService {
             rarity = Card.Rarity.COMMON;
         }
 
-        List<Card> cardsOfRarity = cardRepository.findByRarity(rarity);
-        if (cardsOfRarity.isEmpty()) {
-            // Fallback to common if no cards of selected rarity
-            cardsOfRarity = cardRepository.findByRarity(Card.Rarity.COMMON);
+        List<Card> cards = cardRepository.findByRarityAndIsActiveTrue(rarity);
+        if (cards.isEmpty()) {
+            cards = cardRepository.findByRarityAndIsActiveTrue(Card.Rarity.COMMON);
         }
-
-        return cardsOfRarity.get(random.nextInt(cardsOfRarity.size()));
+        return cards.get(random.nextInt(cards.size()));
     }
 
     private Card drawGuaranteedRareCard() {
-        int roll = random.nextInt(30) + 1; // Only rare+ cards
+        int roll = random.nextInt(30) + 1;
 
         Card.Rarity rarity;
         if (roll <= 1) {
@@ -194,11 +171,10 @@ public class GachaService {
             rarity = Card.Rarity.RARE;
         }
 
-        List<Card> cardsOfRarity = cardRepository.findByRarity(rarity);
-        if (cardsOfRarity.isEmpty()) {
-            cardsOfRarity = cardRepository.findByRarity(Card.Rarity.RARE);
+        List<Card> cards = cardRepository.findByRarityAndIsActiveTrue(rarity);
+        if (cards.isEmpty()) {
+            cards = cardRepository.findByRarityAndIsActiveTrue(Card.Rarity.RARE);
         }
-
-        return cardsOfRarity.get(random.nextInt(cardsOfRarity.size()));
+        return cards.get(random.nextInt(cards.size()));
     }
 }
